<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_card_view"
    android:layout_marginLeft="@dimen/margin_card_view"
    android:layout_marginTop="@dimen/margin_card_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/MyStyle">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episode_e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_fate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_view"
            android:layout_marginLeft="@dimen/margin_card_view"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/episodeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/episodeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/episode" />

            <TextView
                android:id="@+id/episodeAirFate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/air_fate" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>