<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_card_view"
    android:layout_marginLeft="@dimen/margin_card_view"
    android:layout_marginTop="@dimen/margin_card_view">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/MyStyle">

        <ImageView
            android:id="@+id/personageImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/species" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_card_view"
                android:layout_marginLeft="@dimen/margin_card_view"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/personageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/personageSpecies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/species" />

                <TextView
                    android:id="@+id/personageStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/status" />

                <TextView
                    android:id="@+id/personageGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/gender" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>